# imageviewer

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: SDSS_M67.pkl  photometry.ipynb  table.pkl  test_table.pkl
examples/photometry_gravlens/: DESI_catalogue.csv  DESI_table.pkl  ZTF_catalogue.csv  ZTF_table.pkl
lib/: image_viewer_class.py
src/imageviewer/: __init__.py  image_viewer_class.py  photometry.py  utils.py
