[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imageviewer"
version = "0.2.7"
description = "A Python package for viewing astronomical FITS images"
authors = [{ name = "Oscar Soler", email = "osolertf@gmail.com" }]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "astropy",
    "reproject",
]

[project.urls]
Homepage = "https://github.com/oscar-s-p/imageviewer"
Repository = "https://github.com/oscar-s-p/imageviewer"

[tool.setuptools.packages.find]
where = ["src"]